added md5 and changelogs

--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v2.0.9 (12-Sep-15)
+------------------------
+
+- Fixed Thai shows.
+
+------------------------
 DooFree v2.0.8 (21-Jun-15)
 ------------------------
 
