Removed debug lines

--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v3.0.2 (29-Oct-15)
+------------------------
+
+- Fixed slow startup
+
+------------------------
 DooFree v3.0.1 (28-Oct-15)
 ------------------------
 
