changed thai server

--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v3.0.4 (07-Nov-15)
+------------------------
+
+- Changed to GM server
+
+------------------------
 DooFree v3.0.3 (28-Oct-15)
 ------------------------
 
