improved list of resolvers

--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v3.0.6 (27-Nov-15)
+------------------------
+
+- Limit resolvers list
+
+------------------------
 DooFree v3.0.4 (07-Nov-15)
 ------------------------
 
