added proper md5

--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v3.0.8 (03-Dec-15)
+------------------------
+
+- Changed readme
+
+------------------------
 DooFree v3.0.7 (03-Dec-15)
 ------------------------
 
