--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v3.0.10 (03-Dec-15)
+------------------------
+
+- Testing changelog
+
+------------------------
 DooFree v3.0.9 (03-Dec-15)
 ------------------------
 
