added extra so urces

--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,10 +1,11 @@
 ------------------------
-DooFree v3.0.12 (12-Dec-15)
+DooFree v3.0.13 (12-Dec-15)
 ------------------------
 
 - Changed to server 2
 - Removed Thai entertainment news
 - Added Thai talk shows
+- Added new movies and series sources
 
 ------------------------
 DooFree v3.0.10 (03-Dec-15)
