fixed icefilms and hugefiles

--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,11 @@
 ------------------------
+DooFree v3.0.15 (23-Dec-15)
+------------------------
+
+- Fixed Hugefiles resolver
+- Fixed Icefilms source
+
+------------------------
 DooFree v3.0.14 (21-Dec-15)
 ------------------------
 
