--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v3.0.19 (26-Dec-15)
+------------------------
+
+- Fixed TheVideo source
+
+------------------------
 DooFree v3.0.18 (24-Dec-15)
 ------------------------
 
