removed bad sources

--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v3.0.20 (26-Dec-15)
+------------------------
+
+- Removed Movie25 and Beinmovie
+
+------------------------
 DooFree v3.0.19 (26-Dec-15)
 ------------------------
 
