--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v3.0.21 (30-Dec-15)
+------------------------
+
+- Added 1080p Movie section
+
+------------------------
 DooFree v3.0.20 (26-Dec-15)
 ------------------------
 
