--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v3.0.21 (10-Jan-16)
+------------------------
+
+- Added pagination for Thai series
+
+------------------------
 DooFree v3.0.21 (30-Dec-15)
 ------------------------
 
