--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,11 @@
 ------------------------
+DooFree v3.1.1 (20-Jan-16)
+------------------------
+
+- Added experimental section
+- Added more live tv sources
+
+------------------------
 DooFree v3.1.0 (10-Jan-16)
 ------------------------
 
