changed menu structure

--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v3.2.4 (20-Feb-16)
+------------------------
+
+- Created a new menu structure for thai show 2
+
+------------------------
 DooFree v3.2.3 (20-Feb-16)
 ------------------------
 
