--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v3.2.8 (23-Feb-16)
+------------------------
+
+- Added HD movie source DirectDLMovie! Have fun!
+
+------------------------
 DooFree v3.2.7 (22-Feb-16)
 ------------------------
 
