--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v3.3.1 (24-Feb-16)
+------------------------
+
+- Speed up DirectDLMovie parser
+
+------------------------
 DooFree v3.3.0 (24-Feb-16)
 ------------------------
 
