--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v3.3.3 (26-Feb-16)
+------------------------
+
+- Fixed a typo (doh)
+
+------------------------
 DooFree v3.3.2 (26-Feb-16)
 ------------------------
 
