fixed broken source

--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v3.3.7 (1-Mar-16)
+------------------------
+
+- Fixed broken DirectDLMovie source
+
+------------------------
 DooFree v3.3.6 (1-Mar-16)
 ------------------------
 
