--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,11 @@
 ------------------------
+DooFree v3.4.1 (26-Mar-16)
+------------------------
+
+- Fixed SeriesTV US source
+-
+
+------------------------
 DooFree v3.4.1 (23-Mar-16)
 ------------------------
 
