--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v3.4.4 (27-Mar-16)
+------------------------
+
+- Improved FMovies TV Shows matching
+
+------------------------
 DooFree v3.4.3 (27-Mar-16)
 ------------------------
 
