--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v3.4.5 (27-Mar-16)
+------------------------
+
+- Fixed a typo (doh)
+
+------------------------
 DooFree v3.4.4 (27-Mar-16)
 ------------------------
 
