fixed thai shows title

--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v3.4.6 (27-Mar-16)
+------------------------
+
+- Fixed thai shows title
+
+------------------------
 DooFree v3.4.5 (27-Mar-16)
 ------------------------
 
@@ -70,146 +76,4 @@ Performance patch!
 
 - Re-enabled caching
 - Disabled unnecessary sources
-
-------------------------
-DooFree v3.3.4 (27-Feb-16)
-------------------------
-
-- Added Afdah as HD quality source for older movies
-
-------------------------
-DooFree v3.3.3 (26-Feb-16)
-------------------------
-
-- Fixed a typo (doh)
-
-------------------------
-DooFree v3.3.2 (26-Feb-16)
-------------------------
-
-- Fixed some of the non working DirectDLMovie source
-
-------------------------
-DooFree v3.3.1 (24-Feb-16)
-------------------------
-
-- Speed up DirectDLMovie parser
-
-------------------------
-DooFree v3.3.0 (24-Feb-16)
-------------------------
-
-- Cracked AdFly encryption as an alternative to DirectDLMovie source!
-
-------------------------
-DooFree v3.2.8 (23-Feb-16)
-------------------------
-
-- Added HD movie source DirectDLMovie! Have fun!
-
-------------------------
-DooFree v3.2.7 (22-Feb-16)
-------------------------
-
-- Disabled movies and series cache
-
-------------------------
-DooFree v3.2.6 (21-Feb-16)
-------------------------
-
-- Fixed serie feeds
-
-------------------------
-DooFree v3.2.5 (21-Feb-16)
-------------------------
-
-- Fixed movie feeds
-- Added lots of categories in Thai show 2
-
-------------------------
-DooFree v3.2.4 (20-Feb-16)
-------------------------
-
-- Created a new menu structure for Thai show 2
-
-------------------------
-DooFree v3.2.3 (20-Feb-16)
-------------------------
-
-- Added more thai live tv channels
-
-------------------------
-DooFree v3.2.2 (20-Feb-16)
-------------------------
-
-- Added Thai Shows 2 section (faster streams and better quality)
-- Removed 1080p folder
-- Removed Featured movies
-
-------------------------
-DooFree v3.1.2 (18-Feb-16)
-------------------------
-
-- Bypass security for some of the Thai videos
-
-------------------------
-DooFree v3.1.1 (20-Jan-16)
-------------------------
-
-- Added experimental section
-- Added more live tv sources
-
-------------------------
-DooFree v3.1.0 (10-Jan-16)
-------------------------
-
-- Added pagination for Thai series
-
-------------------------
-DooFree v3.0.21 (30-Dec-15)
-------------------------
-
-- Added 1080p Movie section
-
-------------------------
-DooFree v3.0.20 (26-Dec-15)
-------------------------
-
-- Removed Movie25 and Beinmovie
-
-------------------------
-DooFree v3.0.19 (26-Dec-15)
-------------------------
-
-- Fixed TheVideo source
-
-------------------------
-DooFree v3.0.18 (24-Dec-15)
-------------------------
-
-- Fixed Dizigold source
-
-------------------------
-DooFree v3.0.17 (23-Dec-15)
-------------------------
-
-- Fixed Hugefiles resolver
-- Fixed Icefilms source
-
-------------------------
-DooFree v3.0.14 (21-Dec-15)
-------------------------
-
-- Fixed Nowvideo resolver
-- Removed uploadc resolver
-- Removed mrfile resolver
-
-------------------------
-DooFree v3.0.13 (12-Dec-15)
-------------------------
-
-- Changed to server 2
-- Removed Thai entertainment news
-- Added Thai talk shows
-- Added new movies and series sources
 
