--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v3.4.8 (05-Apr-16)
+------------------------
+
+- Fixed SeriesTV source
+
+------------------------
 DooFree v3.4.7 (03-Apr-16)
 ------------------------
 
