--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v3.5.0 (07-Apr-16)
+------------------------
+
+- Added a new HD Movie source (USMoviesHD)
+
+------------------------
 DooFree v3.4.9 (06-Apr-16)
 ------------------------
 
