--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,9 @@
 ------------------------
+DooFree v3.5.4 (20-Apr-16)
+------------------------
+- Temp update for series
+
+------------------------
 DooFree v3.5.3 (10-Apr-16)
 ------------------------
 
