--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v3.5.6 (30-Apr-16)
+------------------------
+
+- Temp series server update
+
+------------------------
 DooFree v3.5.5 (28-Apr-16)
 ------------------------
 
