--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v3.5.7 (09-May-16)
+------------------------
+
+- Added FMovies tokenizer
+
+------------------------
 DooFree v3.5.6 (30-Apr-16)
 ------------------------
 
