--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v3.5.8 (09-May-16)
+------------------------
+
+- Fixed most of Dizilabs videos
+
+------------------------
 DooFree v3.5.7 (09-May-16)
 ------------------------
 
