--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,152 +1,7 @@
 ------------------------
-DooFree v3.5.8 (09-May-16)
+DooFree v3.5.9 (09-May-16)
 ------------------------
 
 - Fixed most of Dizilabs videos
-
-------------------------
-DooFree v3.5.7 (09-May-16)
-------------------------
-
-- Added FMovies tokenizer
-
-------------------------
-DooFree v3.5.6 (30-Apr-16)
-------------------------
-
-- Temp series server update
-
-------------------------
-DooFree v3.5.5 (28-Apr-16)
-------------------------
-
-- Changed to German server for Thai shows
-
-------------------------
-DooFree v3.5.4 (20-Apr-16)
-------------------------
-
-- Temp update for series
-
-------------------------
-DooFree v3.5.3 (10-Apr-16)
-------------------------
-
-- Bypassed FMovies new security again
-- Disabled seriesTV and USMoviesHD sources for now as the site seems to be down
-
-------------------------
-DooFree v3.5.2 (08-Apr-16)
-------------------------
-
-- Enabled FMovies again. Bypassed security for now :)
-
-------------------------
-DooFree v3.5.1 (08-Apr-16)
-------------------------
-
-- Disabled FMovies for now. It seems they have strengthen their security
-
-------------------------
-DooFree v3.5.0 (07-Apr-16)
-------------------------
-
-- Added a new HD Movie source (USMoviesHD)
-
-------------------------
-DooFree v3.4.9 (06-Apr-16)
-------------------------
-
-- Added fallback for SeriesTV source
-
-------------------------
-DooFree v3.4.8 (05-Apr-16)
-------------------------
-
-- Fixed SeriesTV source
-
-------------------------
-DooFree v3.4.7 (03-Apr-16)
-------------------------
-
-- Bypass new security of FMovies
-
-------------------------
-DooFree v3.4.6 (27-Mar-16)
-------------------------
-
-- Fixed thai shows title
-
-------------------------
-DooFree v3.4.5 (27-Mar-16)
-------------------------
-
-- Fixed a typo (doh)
-
-------------------------
-DooFree v3.4.4 (27-Mar-16)
-------------------------
-
-- Improved FMovies TV Shows matching
-
-------------------------
-DooFree v3.4.3 (27-Mar-16)
-------------------------
-
-- Added another HD TV Shows source (FMovies) enjoy!
-
-------------------------
-DooFree v3.4.2 (26-Mar-16)
-------------------------
-
-- Fixed SeriesTV US source
-
-------------------------
-DooFree v3.4.1 (23-Mar-16)
-------------------------
-
-- Put Dizilab back. Hope they will finish their video migration soon
-- Added a new HD TV Shows source (SeriesTV US)
-
-Cheers! Mpie
-
-------------------------
-DooFree v3.4.0 (12-Mar-16)
-------------------------
-
-- Added a cartoon source (KissCartoon)
-
-------------------------
-DooFree v3.3.9 (7-Mar-16)
-------------------------
-
-- Change Thai tv shows english server to german server for now
-
-------------------------
-DooFree v3.3.8 (6-Mar-16)
-------------------------
-
-- Temporary disabled DiziLab. They are migrating to a new server. None of their videos are working atm
-
-------------------------
-DooFree v3.3.7 (1-Mar-16)
-------------------------
-
-- Fixed broken DirectDLMovie source
-
-------------------------
-DooFree v3.3.6 (1-Mar-16)
-------------------------
-
-- Added option to clear cache and source
-- Implemented a better sources loading screen
-
-------------------------
-DooFree v3.3.5 (1-Mar-16)
-------------------------
-
-Performance patch!
-
-- Re-enabled caching
-- Disabled unnecessary sources
+- Clear changelog
 
