fixed fmovies again

--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v3.5.10 (10-May-16)
+------------------------
+
+- Fixed FMovies (again)
+
+------------------------
 DooFree v3.5.9 (09-May-16)
 ------------------------
 
