updated hash maker

--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v3.5.11 (12-May-16)
+------------------------
+
+- Updated FMovies hash maker
+
+------------------------
 DooFree v3.5.10 (10-May-16)
 ------------------------
 
