--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,11 @@
 ------------------------
+DooFree v3.6.0 (18-May-16)
+------------------------
+
+- Disabled kisscartoon for now
+- Fixed Pubfilm HD movies and series source
+
+------------------------
 DooFree v3.5.11 (12-May-16)
 ------------------------
 
