--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v3.6.1 (18-May-16)
+------------------------
+
+- Minor cleanup
+
+------------------------
 DooFree v3.6.0 (18-May-16)
 ------------------------
 
