--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v3.6.2 (18-May-16)
+------------------------
+
+- Added 2 more HD sources (sezonlukdizi and pelispedia) whut?
+
+------------------------
 DooFree v3.6.1 (18-May-16)
 ------------------------
 
