--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v3.6.5 (12-Jun-16)
+------------------------
+
+- Added DiziGold
+
+------------------------
 DooFree v3.6.4 (12-Jun-16)
 ------------------------
 
