--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v3.6.7 (12-Jun-16)
+------------------------
+
+- Removed slow sources
+
+------------------------
 DooFree v3.6.6 (12-Jun-16)
 ------------------------
 
