--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,69 +1,6 @@
 ------------------------
-DooFree v3.6.7 (12-Jun-16)
+DooFree v3.6.8 (12-Jun-16)
 ------------------------
 
-- Removed slow sources
-
-------------------------
-DooFree v3.6.6 (12-Jun-16)
-------------------------
-
-- Fixed another typo
-
-------------------------
-DooFree v3.6.5 (12-Jun-16)
-------------------------
-
-- Added DiziGold
-
-------------------------
-DooFree v3.6.4 (12-Jun-16)
-------------------------
-
-- Fixed typo
-
-------------------------
-DooFree v3.6.3 (12-Jun-16)
-------------------------
-
-- Disabled pelispedia (too slow)
-- Added putlocker and xmovies source
-
-------------------------
-DooFree v3.6.2 (18-May-16)
-------------------------
-
-- Added 2 more HD sources (sezonlukdizi and pelispedia) whut?
-
-------------------------
-DooFree v3.6.1 (18-May-16)
-------------------------
-
-- Minor cleanup
-
-------------------------
-DooFree v3.6.0 (18-May-16)
-------------------------
-
-- Disabled kisscartoon for now
-- Fixed Pubfilm HD movies and series source
-
-------------------------
-DooFree v3.5.11 (12-May-16)
-------------------------
-
-- Updated FMovies hash maker
-
-------------------------
-DooFree v3.5.10 (10-May-16)
-------------------------
-
-- Fixed FMovies (again)
-
-------------------------
-DooFree v3.5.9 (09-May-16)
-------------------------
-
-- Fixed most of Dizilabs videos
-- Clear changelog
+- Added new Movie & TV Shows sources
 
