--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v3.7.1 (03-Aug-16)
+------------------------
+
+- Fixed Cartoons section
+
+------------------------
 DooFree v3.7.0 (19-Jun-16)
 ------------------------
 
