--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v3.7.3 (19-Aug-16)
+------------------------
+
+- Fixed some HD movie sources
+
+------------------------
 DooFree v3.7.2 (19-Aug-16)
 ------------------------
 
