added new hd sources

--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v3.7.4 (20-Aug-16)
+------------------------
+
+- Added lots of new HD movies and series sources
+
+------------------------
 DooFree v3.7.3 (19-Aug-16)
 ------------------------
 
