fixed thai shows

--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v3.7.7 (20-Aug-16)
+------------------------
+
+- Fixed Thai shows
+
+------------------------
 DooFree v3.7.6 (20-Aug-16)
 ------------------------
 
