added new source

--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v3.7.9 (01-Sep-16)
+------------------------
+
+- Added Dizibox as tv shows source
+
+------------------------
 DooFree v3.7.8 (28-Aug-16)
 ------------------------
 
