--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v3.8.1 (07-Sep-16)
+------------------------
+
+- Fixed more sources
+
+------------------------
 DooFree v3.8.0 (07-Sep-16)
 ------------------------
 
