fixed more sources

--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,11 @@
 ------------------------
+DooFree v3.8.2 (25-Sep-16)
+------------------------
+
+- Fixed cartoons
+- Fixed more sources
+
+------------------------
 DooFree v3.8.1 (07-Sep-16)
 ------------------------
 
