fixed tv shows sources

--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v3.8.3 (3-Oct-16)
+------------------------
+
+- Fixed tv shows sources
+
+------------------------
 DooFree v3.8.2 (25-Sep-16)
 ------------------------
 
