--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v3.8.4 (3-Oct-16)
+------------------------
+
+- Minor tweak
+
+------------------------
 DooFree v3.8.3 (3-Oct-16)
 ------------------------
 
