added new source

--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v3.8.5 (2-Nov-16)
+------------------------
+
+- Added new movie and series source (OneMovies)
+
+------------------------
 DooFree v3.8.4 (3-Oct-16)
 ------------------------
 
