--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,9 +1,15 @@
 ------------------------
+DooFree v3.8.7 (10-Nov-16)
+------------------------
+
+- Improved cache flushing. This will also cleanup all the thumbnails that have been downloaded to clean up some space!
+
+------------------------
 DooFree v3.8.6 (7-Nov-16)
 ------------------------
 
 - Added LiveTV (HBO, Film1, FoxSports, Sky Channels and more)
-Experimental though. Watch it, while it's still online
+  (Experimental though. Watch it, while it's still online)
 
 ------------------------
 DooFree v3.8.5 (2-Nov-16)
