--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v3.9.0 (10-Dec-16)
+------------------------
+
+- Added Bollywood movies
+
+------------------------
 DooFree v3.8.8 (21-Nov-16)
 ------------------------
 
