--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,11 @@
 ------------------------
+DooFree v3.9.1 (18-Dec-16)
+------------------------
+
+- Fixed Pelispedia source
+- Removed old sources
+
+------------------------
 DooFree v3.9.0 (10-Dec-16)
 ------------------------
 
