--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,11 @@
 ------------------------
+DooFree v3.9.2 (30-Dec-16)
+------------------------
+
+- Fixed ymovies source
+- Fixed putlocker source
+
+------------------------
 DooFree v3.9.1 (18-Dec-16)
 ------------------------
 
