added new category for thai shows

--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v3.9.3 (19-Jan-17)
+------------------------
+
+- Added Thai game shows
+
+------------------------
 DooFree v3.9.2 (30-Dec-16)
 ------------------------
 
