added fallback server for Thai shows

--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v3.9.4 (02-Feb-17)
+------------------------
+
+- Added fallback server for Thai Shows
+
+------------------------
 DooFree v3.9.3 (19-Jan-17)
 ------------------------
 
