--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,11 @@
 ------------------------
+DooFree v3.9.5 (02-Feb-17)
+------------------------
+
+There has been a GVideo takedown recently. Most video's are working again.
+Bare with me
+
+------------------------
 DooFree v3.9.4 (02-Feb-17)
 ------------------------
 
