--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v3.9.6 (05-Feb-17)
+------------------------
+
+- Fixed lots of movies and series sources
+
+------------------------
 DooFree v3.9.5 (02-Feb-17)
 ------------------------
 
