added and fixed sources

--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v3.9.7 (09-Feb-17)
+------------------------
+
+- Fixed more sources and added 1 new source
+
+------------------------
 DooFree v3.9.6 (05-Feb-17)
 ------------------------
 
