--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v3.9.8 (14-Feb-17)
+------------------------
+
+- Improved codebase
+
+------------------------
 DooFree v3.9.7 (09-Feb-17)
 ------------------------
 
