--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v3.9.8 (17-Feb-17)
+------------------------
+
+- Fixed 2 more sources
+
+------------------------
 DooFree v3.9.8 (14-Feb-17)
 ------------------------
 
