--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v3.10.0 (31-Mar-17)
+------------------------
+
+- Fixed 4 sources
+
+------------------------
 DooFree v3.9.9 (17-Feb-17)
 ------------------------
 
