--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v3.10.1 (31-Mar-17)
+------------------------
+
+- Added CDN
+
+------------------------
 DooFree v3.10.0 (31-Mar-17)
 ------------------------
 
