--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v3.11.1 (22-Apr-17)
+------------------------
+
+- Small tweak for YMovies
+
+------------------------
 DooFree v3.11.0 (22-Apr-17)
 ------------------------
 
