updated base code

--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v3.11.2 (22-Apr-17)
+------------------------
+
+- Changed core code
+
+------------------------
 DooFree v3.11.1 (22-Apr-17)
 ------------------------
 
