--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,14 @@
 ------------------------
+DooFree v3.11.4 (23-Apr-17)
+------------------------
+
+- Important news: Please update to Kodi version 17.1
+  The latest version of Kodi can access HTTPS websites, which contains more movies and series sources
+  Contact me if you don't know how to update your Kodi
+  Support for non HTTPS websites will end when DooFree 4.0 is released in 3 months!
+  So please upgrade!
+  
+------------------------
 DooFree v3.11.3 (23-Apr-17)
 ------------------------
 
