--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,11 @@
 ------------------------
+DooFree v3.12.0 (29-Apr-17)
+------------------------
+
+- Fixed Dizigold and Pmovies (https only)
+- Added 2 more sources (also https only, so please upgrade your KODI)
+
+------------------------
 DooFree v3.11.4 (23-Apr-17)
 ------------------------
 
