--- a/plugin.video.doofree/resources/language/Arabic/strings.po
+++ b/plugin.video.doofree/resources/language/Arabic/strings.po
@@ -1,6 +1,3 @@
-# Addon Name: DooFree
-# Addon id: plugin.video.doofree
-# Addon Provider: DooFree
 # Translators:
 # Translators:
 # Translators:
@@ -25,6 +22,7 @@ msgstr ""
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "PO-Revision-Date: 2017-05-30 09:11+0000\n"
 "Last-Translator: Viper2k4\n"
+"Language-Team: Arabic (http://www.transifex.com/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
