--- a/plugin.video.doofree/resources/language/Galician/strings.po
+++ b/plugin.video.doofree/resources/language/Galician/strings.po
@@ -1,6 +1,3 @@
-# Addon Name: DooFree
-# Addon id: plugin.video.doofree
-# Addon Provider: DooFree
 # Translators:
 # Translators:
 # Translators:
@@ -26,6 +23,7 @@ msgstr ""
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "PO-Revision-Date: 2017-05-30 09:11+0000\n"
 "Last-Translator: Viper2k4\n"
+"Language-Team: Galician (http://www.transifex.com/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -222,11 +220,11 @@ msgstr "[B]AXUSTES[/B] : Fornecedoras"
 
 msgctxt "#32048"
 msgid "[B]DOOFREE[/B] : Downloads"
-msgstr "[B]AXUSTES[/B] : Descargas"
+msgstr "[B]DOOFREE[/B] : Descargas"
 
 msgctxt "#32049"
 msgid "[B]DOOFREE[/B] : Viewtypes"
-msgstr "[B]AXUSTES[/B] : Visualización"
+msgstr "[B]DOOFREE[/B] : Visualización"
 
 msgctxt "#32050"
 msgid "[B]DOOFREE[/B] : Clear providers..."
@@ -322,8 +320,8 @@ msgid "Refresh"
 msgstr "Actualizar"
 
 msgctxt "#32073"
-msgid "[B]HELP[/B] : www.tvaddons.ag"
-msgstr "[B]AXUDA[/B] : www.tvaddons.ag"
+msgid "[B]TRAKT[/B] : Authorize"
+msgstr "[B]TRAKT[/B]: Autorización"
 
 msgctxt "#32074"
 msgid "[B]HELP[/B]"
