--- a/plugin.video.doofree/resources/language/Hungarian/strings.po
+++ b/plugin.video.doofree/resources/language/Hungarian/strings.po
@@ -1,6 +1,3 @@
-# Addon Name: DooFree
-# Addon id: plugin.video.doofree
-# Addon Provider: DooFree
 # Translators:
 # Translators:
 # Translators:
@@ -29,6 +26,7 @@ msgstr ""
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "PO-Revision-Date: 2017-05-30 12:02+0000\n"
 "Last-Translator: plasticfighter\n"
+"Language-Team: Hungarian (http://www.transifex.com/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -325,8 +323,8 @@ msgid "Refresh"
 msgstr "Frissítés"
 
 msgctxt "#32073"
-msgid "[B]HELP[/B] : www.tvaddons.ag"
-msgstr "[B]SEGÍTSÉG[/B] : www.tvaddons.ag"
+msgid "[B]TRAKT[/B] : Authorize"
+msgstr "[B]TRAKT[/B]: Engedélyezés"
 
 msgctxt "#32074"
 msgid "[B]HELP[/B]"
