--- a/plugin.video.doofree/resources/language/Polish/strings.po
+++ b/plugin.video.doofree/resources/language/Polish/strings.po
@@ -1,6 +1,3 @@
-# Addon Name: DooFree
-# Addon id: plugin.video.doofree
-# Addon Provider: DooFree
 # Translators:
 # Translators:
 # Translators:
@@ -23,13 +20,14 @@
 # Ghuthek, 2016-2017
 # lambda81, 2016
 # lambda81, 2016
-# Tomasz Kondrat, 2017
+# Tomek Kondrat, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: DooFree\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "PO-Revision-Date: 2017-05-30 09:11+0000\n"
 "Last-Translator: Viper2k4\n"
+"Language-Team: Polish (http://www.transifex.com/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -326,8 +324,8 @@ msgid "Refresh"
 msgstr "Odśwież"
 
 msgctxt "#32073"
-msgid "[B]HELP[/B] : www.tvaddons.ag"
-msgstr "[B]POMOC[/B] : www.tvaddons.ag"
+msgid "[B]TRAKT[/B] : Authorize"
+msgstr "[B]TRAKT[/B]: Autoryzacja"
 
 msgctxt "#32074"
 msgid "[B]HELP[/B]"
