--- a/plugin.video.doofree/resources/language/Romanian/strings.po
+++ b/plugin.video.doofree/resources/language/Romanian/strings.po
@@ -1,6 +1,3 @@
-# Addon Name: DooFree
-# Addon id: plugin.video.doofree
-# Addon Provider: DooFree
 # Translators:
 # Translators:
 # Translators:
@@ -29,6 +26,7 @@ msgstr ""
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "PO-Revision-Date: 2017-05-30 09:11+0000\n"
 "Last-Translator: Viper2k4\n"
+"Language-Team: Romanian (http://www.transifex.com/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -225,23 +223,23 @@ msgstr "[B]SETĂRI[/B] : Furnizori"
 
 msgctxt "#32048"
 msgid "[B]DOOFREE[/B] : Downloads"
-msgstr "[B]SETĂRI[/B] : Descărcări"
+msgstr "[B]DOOFREE[/B] : Descărcări"
 
 msgctxt "#32049"
 msgid "[B]DOOFREE[/B] : Viewtypes"
-msgstr "[B]SETĂRI[/B] : Tip vizualizare"
+msgstr "[B]DOOFREE[/B] : Tip vizualizare"
 
 msgctxt "#32050"
 msgid "[B]DOOFREE[/B] : Clear providers..."
-msgstr "[B]SETĂRI[/B] : Curățare furnizori..."
+msgstr "[B]DOOFREE[/B] : Curățare furnizori..."
 
 msgctxt "#32051"
 msgid "[B]DOOFREE[/B] : Clear metadata..."
-msgstr "[B]SETĂRI[/B] : Curățare metadata..."
+msgstr "[B]DOOFREE[/B] : Curățare metadata..."
 
 msgctxt "#32052"
 msgid "[B]DOOFREE[/B] : Clear cache..."
-msgstr "[B]SETĂRI[/B] : Curățare cache..."
+msgstr "[B]DOOFREE[/B] : Curățare cache..."
 
 msgctxt "#32053"
 msgid "[I]Next Page[/I]"
@@ -325,8 +323,8 @@ msgid "Refresh"
 msgstr "Reîmprospătare"
 
 msgctxt "#32073"
-msgid "[B]HELP[/B] : www.tvaddons.ag"
-msgstr "[B]AJUTOR[/B] : www.tvaddons.ag"
+msgid "[B]TRAKT[/B] : Authorize"
+msgstr "[B]TRAKT[/B]: Autorizare"
 
 msgctxt "#32074"
 msgid "[B]HELP[/B]"
