--- a/plugin.video.doofree/resources/language/Russian/strings.po
+++ b/plugin.video.doofree/resources/language/Russian/strings.po
@@ -1,6 +1,3 @@
-# Addon Name: DooFree
-# Addon id: plugin.video.doofree
-# Addon Provider: DooFree
 # Translators:
 # Translators:
 # Translators:
@@ -22,10 +19,11 @@
 # Viktor Sch, 2017
 msgid ""
 msgstr ""
-"Project-Id-Version: DooFree\n"
+"Project-Id-Version: Covenant\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "PO-Revision-Date: 2017-05-30 09:11+0000\n"
 "Last-Translator: Viper2k4\n"
+"Language-Team: Russian (http://www.transifex.com/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -221,24 +219,24 @@ msgid "[B]SETTINGS[/B] : Providers"
 msgstr "[B]НАСТРОЙКИ[/B] : Провайдеры"
 
 msgctxt "#32048"
-msgid "[B]DOOFREE[/B] : Downloads"
-msgstr "[B]DOOFREE[/B] : Загрузки"
+msgid "[B]COVENANT[/B] : Downloads"
+msgstr "[B]COVENANT[/B] : Загрузки"
 
 msgctxt "#32049"
-msgid "[B]DOOFREE[/B] : Viewtypes"
-msgstr "[B]DOOFREE[/B] : Типы"
+msgid "[B]COVENANT[/B] : Viewtypes"
+msgstr "[B]COVENANT[/B] : Типы"
 
 msgctxt "#32050"
-msgid "[B]DOOFREE[/B] : Clear providers..."
-msgstr "[B]DOOFREE[/B] : Очистить провайдеров..."
+msgid "[B]COVENANT[/B] : Clear providers..."
+msgstr "[B]COVENANT[/B] : Очистить провайдеров..."
 
 msgctxt "#32051"
-msgid "[B]DOOFREE[/B] : Clear metadata..."
-msgstr "[B]DOOFREE[/B] : Очистить метаданные..."
+msgid "[B]COVENANT[/B] : Clear metadata..."
+msgstr "[B]COVENANT[/B] : Очистить метаданные..."
 
 msgctxt "#32052"
-msgid "[B]DOOFREE[/B] : Clear cache..."
-msgstr "[B]DOOFREE[/B] : Очистить кэш..."
+msgid "[B]COVENANT[/B] : Clear cache..."
+msgstr "[B]COVENANT[/B] : Очистить кэш..."
 
 msgctxt "#32053"
 msgid "[I]Next Page[/I]"
@@ -294,12 +292,12 @@ msgid "Queue item"
 msgstr "В очередь"
 
 msgctxt "#32066"
-msgid "Watched in DooFree"
-msgstr "Просмотрено в DooFree"
+msgid "Watched in Covenant"
+msgstr "Просмотрено в Covenant"
 
 msgctxt "#32067"
-msgid "Unwatched in DooFree"
-msgstr "Не просмотрено в DooFree"
+msgid "Unwatched in Covenant"
+msgstr "Не просмотрено в Covenant"
 
 msgctxt "#32068"
 msgid "Watched in Trakt"
@@ -322,8 +320,8 @@ msgid "Refresh"
 msgstr "Обновить"
 
 msgctxt "#32073"
-msgid "[B]HELP[/B] : www.tvaddons.ag"
-msgstr "[B]ПОМОЩЬ[/B] : www.tvaddons.ag"
+msgid "[B]TRAKT[/B] : Authorize"
+msgstr "[B]TRAKT[/B]: Авторизация"
 
 msgctxt "#32074"
 msgid "[B]HELP[/B]"
@@ -574,8 +572,8 @@ msgid "No stream available"
 msgstr "Поток недоступен"
 
 msgctxt "#32402"
-msgid "Playback outside DooFree is not allowed"
-msgstr "Воспроизведение вне DooFree не допускается"
+msgid "Playback outside Covenant is not allowed"
+msgstr "Воспроизведение вне Covenant не допускается"
 
 msgctxt "#32403"
 msgid "Download"
